[package]
name = "lorawanwiz"
version = "0.1.0"
edition = "2021"
description = "LoRaWAN modulation visualizer for technical talks. Copyright L. Weinzierl, 2026."
authors = ["L. Weinzierl"]
homepage = "https://weinzierlweb.com"
publish = false

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "webgl2",
    "x11",
    "wayland",
] }
aes = "0.8"
cmac = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioBufferSourceOptions",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
    "console",
    "Window",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
default = []
debug_log = []

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"

[lib]
name = "lorawanwiz"
path = "src/lib.rs"

[[bin]]
name = "lorawanwiz"
path = "src/main.rs"
